[package]
name = "egui_stuff"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Silvagni <galopin@gmail.com>"]
homepage = "https://github.com/galop1n/egui_stuff"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/galop1n/egui_stuff"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
description = "Extra widgets and helpers to use within an egui application"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[dependencies]
egui = { version = "0.22", default-features = false }
